kuber/mongo-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: jihonrado-web
  name: mongodb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mongodb
    spec:
      containers:
      - name: mongodb
        image: mvertes/alpine-mongo
        ports:
        - containerPort: 27017
