kuber/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: jihonrado-web
  name: mongodb
spec:
  ports:
    - port: 27017
  selector:
    name: mongodb
