kuber/web-service.yml
kind: Service
apiVersion: v1
metadata:
  namespace: jihonrado-web
  name: web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: web
