kuber/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: jihonrado-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - jihonrado.es
    secretName: jihonrado-tls
  rules:
  - host: jihonrado.es
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 3000
